Melhorias carrinho de compras

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -5,5 +5,5 @@ footer{
     justify-content: center;
     align-items: center;
     font-weight: bold;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
