--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;500&family=Sedgwick+Ave+Display&display=swap');
+
 #root {
   margin: 0;
   padding: 0;
