--- a/src/pages/cart/Cart.css
+++ b/src/pages/cart/Cart.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;500&family=Sedgwick+Ave+Display&display=swap');
-
 .cart-title {
     display: flex;
     margin: 40px auto 30px;
@@ -16,278 +14,12 @@
     display: flex;
     padding: 0 3%;
     justify-content: space-around;
-    height: 100%;
+    min-height: 100%;
     margin-bottom: 50px;
     flex-wrap: wrap;
 }
 
-.cart-itens {
-    width: 75%;
-}
-
-.cart-itens ul {
-    background-color: #EBE9EA;
-    list-style: none;
-    border: 2px solid #b2b2b2;
-    border-radius: 20px;
-    padding: 10px 15px;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.cart-item {
-    display: flex;
-    align-items: center;
-}
-
-.item-desc {
-    font-family: 'Roboto Slab', sans-serif;
-    font-weight: 400;
-    width: 60%;
-    margin-right: 40px;
-    color: #474747;
-}
-
-.item-desc h3 {
-    color: #00AEFF;
-}
-
-.item-img img {
-    width: 200px;
-    margin-right: 20px;
-    background-color: #dddddd;
-    border-radius: 10px;
-}
-
-.item-options {
-    display: flex;
-}
-
-.item-options__quantity {
-    padding-right: 20px;
-}
-
-.item-options__btn {
-    display: flex;
-}
-
-.btn-quantity {
-    background-color: #00AEFF;
-    color: #FFF;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 10px;
-    width: 15px;
-    font-weight: bold;
-    border: none;
-    padding: 10px 15px;
-    font-size: 1em;
-}
-
-.btn-quantity:hover {
-    background-color: #FFF;
-    color: #00AEFF;
-    border: 1px solid #00AEFF;
-}
-
-.item-quantity {
-    min-width: 20px;
-    background-color: #FFF;
-    margin: 15px 5px;
-    padding: 10px;
-    height: 15px;
-    border: 2px solid #00AEFF;
-    border-radius: 10px;
-    color: #00AEFF;
-    font-weight: bold;
-    text-align: center;
-}
-
-.quantity-title {
-    color: #00AEFF;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.price-title {
-    color: #0BB07B;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.item-price {
-    width: 90px;
-    padding: 10px;
-    height: 15px;
-    color: #0BB07B;
-    font-weight: bold;
-    text-align: center;
-}
-
-.delete-item {
-    text-align: center;
-    margin: auto 10px;
-    border-radius: 25px;
-}
-
-.delete-item img {
-    width: 30px;
-    margin: 0 10px;
-}
-
-.delete-item:hover {
-    background-color: #d6d5d5;
-    cursor: pointer;
-}
-
-.payment-itens {
-    width: 20%;
-    height: 600px;
-}
-
-.payment-cart {
-    height: 450px;
-    background-color: #EBE9EA;
-    border: 2px solid #b2b2b2;
-    border-radius: 20px;
-    padding: 10px 15px;
-    margin-top: 15px;
-    margin-bottom: 20px;
-}
-
-.payment-resume {
-    color: #00AEFF;
-    text-align: center;
-    border-bottom: 1px solid #b2b2b292;
-    padding-bottom: 10px;
-}
-
-.payment-subtotal {
-    display: flex;
-    justify-content: space-around;
-    border-radius: 5px;
-    color: #474747;
-    font-weight: bold;
-    font-size: 16px;
-    margin-bottom: 10px;
-    align-items: center;
-}
-
-.payment-value {
-    font-size: 22px;
-}
-
-.payment-pix {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.payment-pix h2 {
-    margin: -10px 0 -5px;
-    color: #0bb045
-}
-
-.pix-method {
-    color: #0bb045;
-    font-size: 10px;
-}
-
-.pix-discount {
-    text-align: center;
-    font-size: 11px;
-}
-
-.card-method{
-margin-bottom: 30px;
-}
-
-.card-method h2 {
-    color: #00AEFF;
-    margin-bottom: -10px;
-    text-align: center;
-}
-
-.card-method p {
-    text-align: center;
-    font-size: 11px;
-}
-
-.finish {
-    display: flex;
-    margin: 35px auto 10px auto;
-    justify-content: center;
-}
-
-.payment-freight {
-    width: 90%;
-    background-color: #EBE9EA;
-    border: 2px solid #b2b2b2;
-    border-radius: 20px;
-    padding: 10px 15px;
-    height: 220px;
-    margin-top: 40px;
-    margin-left: 0px;
-}
-
-.payment-total {
-    display: flex;
-    justify-content: space-around;
-    border-radius: 10px;
-    color: #FFF;
-    font-weight: bold;
-    font-size: 20px;
-    margin: -5px auto 5px auto;
-    align-items: center;
-    background-color: #0bb045;
-    width: 90%;
-    height: 50px;
-}
-
-.payment-freight label {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    font-weight: bold;
-    justify-content: center;
-}
-
-.payment-freight input {
-    background-color: #dfdfdf;
-    padding: 10px 15px;
-    border-radius: 10px;
-    margin-left: 10px;
-    font-size: 16px;
-    width: 70%;
-}
-
-.payment-freight h4 {
-    margin-top: -10px;
-    text-align: center;
-}
-
-.freight-erro {
-    color: #F03D3D;
-}
-
-.freight-value {
-    color: #0BB07B;
-}
-
-.freight {
-    display: flex;
-    justify-content: space-around;
-    border-radius: 5px;
-    color: #474747;
-    font-weight: bold;
-    font-size: 16px;
-    margin-bottom: 10px;
-    margin-top: -40px;
-    align-items: center;
-}
-
+/*      Carrinho vazio      */
 .empity-cart {
     height: 100vh;
     display: flex;
@@ -308,23 +40,29 @@ margin-bottom: 30px;
     color: #474747;
 }
 
+/*      Carrinho vazio      */
+
+/*      Finalizar compra      */
+
 .btn-cart{
     background-color: #00AEFF;
     color: #FFF;
     text-align: center;
     cursor: pointer;
     border-radius: 10px;
-    width: 90%;
+    width: 100%;
     font-weight: bold;
     border: none;
-    padding: 10px 15px;
-    font-size: 1.1em;
+    padding: 20px 15px;
+    font-size: 1.4em;
     display: flex;
     justify-content: center;
-    margin: 0 auto;
+    margin: 15px auto;
 }
 .btn-cart:hover{
     background-color: #FFF;
     color: #00AEFF;
     border:1px solid #00AEFF;
 }
+
+/*      Finalizar compra      */
