--- a/src/components/payment/CreditCart/Flag/Flag.css
+++ b/src/components/payment/CreditCart/Flag/Flag.css
@@ -1,29 +1,39 @@
-.radio-image{
+.radio-image {
     display: flex;
     border: none;
     width: 300px;
 }
-.radio-image label > input{
+
+.radio-image label>input {
     visibility: hidden;
 }
-.radio-image label > input + img{
-    cursor:pointer;
+
+.radio-image label>input+img {
+    cursor: pointer;
     margin: 0 5px;
-    border-radius:10px;
+    border-radius: 10px;
     width: 40px;
-    opacity: 50%;
-}
-.radio-image label > input:checked + img{
-    border:2px solid #474747;
-    opacity: 100%;
-    
 }
 
-.creditcard-inputs{
+.input-checked {
+    border: 2px solid #474747;
+    opacity: 100%;
+}
+
+.input-unchecked {
+    opacity: 50%;
+}
+
+.visa {
+    opacity: 10%;
+}
+
+.creditcard-inputs {
     display: flex;
     align-items: center;
 }
-.creditcard-inputs p{
+
+.creditcard-inputs p {
     width: 150px;
     font-family: 'Roboto Slab', sans-serif;
     font-size: 14px;
