--- a/src/components/payment/Payment.css
+++ b/src/components/payment/Payment.css
@@ -1,10 +1,11 @@
 .payment-page {
-    width: 90%;
-    margin: 0 auto 80px auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .payment-type {
-    width: 68%;
+    width: 100%;
     margin-right: 10px;
 }
 
@@ -48,6 +49,3 @@
     font-weight: 500;
 }
 
-.order-resume{
-    width: 30%;
-}
