--- a/src/pages/product/Product.css
+++ b/src/pages/product/Product.css
@@ -111,3 +111,105 @@
 .product-parcels span {
     font-size: 11px;
 }
+
+
+/* Modal */
+
+.modal-content {
+    width: 30%;
+    border: 1px solid #474747;
+    padding: 15px;
+    border-radius: 5px;
+    position: absolute;
+    top: 10%;
+    left: 35%;
+    background-color: #f6f4f4;
+}
+
+.modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-title {
+    width: 90%;
+    display: flex;
+    background-color: #ddfae3;
+    border-radius: 20px;
+    border: 1px solid #01ba29;
+    color: #474747;
+    align-items: center;
+}
+
+.modal-title img {
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+}
+
+.modal-title p {
+    font-size: 18px;
+    margin-left: 5px;
+}
+
+.modal-btn {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+}
+
+.modal-btn__cart {
+    background-color: #00AEFF;
+    color: #FFF;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 10px;
+    width: 35%;
+    font-weight: bold;
+    border: none;
+    padding: 10px 15px;
+    font-size: .9em;
+    display: flex;
+    justify-content: center;
+    margin: 25px auto;
+    height: 20%;
+    align-items: center;
+}
+.modal-btn__cart img{
+    width: 20px;
+    margin-right: 5px;
+}
+.modal-btn__cart:hover {
+    background-color: #FFF;
+    color: #00AEFF;
+    border: 1px solid #00AEFF;
+}
+
+.modal-btn__buy {
+    background-color: #0BB07B;
+    color: #FFF;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 10px;
+    width: 50%;
+    font-weight: bold;
+    border: none;
+    padding: 10px 15px;
+    font-size: .9em;
+    display: flex;
+    justify-content: center;
+    margin: 25px auto;
+    align-items: center;
+}
+
+.modal-btn__buy:hover {
+    background-color: #FFF;
+    color: #0BB07B;
+    border: 1px solid #0BB07B;
+}
+.modal-btn__buy img{
+    width: 20px;
+    margin-right: 5px;
+}
