--- a/src/components/product/ProductImg/ProductImg.css
+++ b/src/components/product/ProductImg/ProductImg.css
@@ -13,7 +13,7 @@
     padding: 120px 30px;
     background-color: #efefef;
     border-radius: 15px;
-    width: 50%;
+    width: 70%;
     height: 50%;
 }
 
@@ -45,4 +45,31 @@
     opacity: 100%;
     cursor: pointer;
     scale:1.1;
+}
+
+.main-img{
+    width: 100%;
+    cursor: none;
+}
+
+.magnify{
+    display: none;
+    position: absolute;
+    background-repeat: no-repeat;
+    border: 2px solid #FFF;
+    width: 200px;
+    height: 200px;
+    background-size: 400%;
+    background-position: center;
+    pointer-events: none;
+    border-radius: 50%;
+    transform: scale(0);
+    animation: scaleUp 200ms ease-in forwards;
+}
+
+@keyframes scaleUp{
+    0%{transform: scale(0)}
+    90%{transform: scale(1.2)}
+    100%{transform: scale(1)}
+    
 }
