--- a/src/components/gallery/Gallery.css
+++ b/src/components/gallery/Gallery.css
@@ -1,19 +1,3 @@
-.products-img{
-    width: 150px;
-}
-
-.products-img:hover{
-    scale:1.5;
-    cursor: pointer;
-}
-
-.products-item:hover{
-    cursor: pointer;
-}
-
-.products-item p{
-    text-decoration: none;
-}
 .products{
     width: 90%;
     margin: 0 auto;
@@ -30,16 +14,9 @@
     width: 22%;
 }
 
-.products-item{
-    background-color: #EBE9EA;
-    text-align: center;
-    padding: 30px 0 10px 0;
-    margin: 10px 0;
-    border-radius: 5px;
-    opacity: 80%;
+.link-no-decoration {
+    text-decoration: none;
 }
-
-.products-item:hover{
-    opacity: 100%;
-    border: 1px solid #2962FF;
+.link-no-decoration:visited{
+    color: #474747;
 }
