--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -20,11 +20,11 @@
 
 .home-header{
     align-items: flex-start;
-    background-attachment: fixed;
     background-image: linear-gradient(#313131ac, #121212da), url('../../img/wallpaper/wallpaper.jpeg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    opacity: 90%;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -36,21 +36,6 @@
     
 }
 
-.home-header::after {
-    align-items: flex-start;
-    background-attachment: fixed;
-    background-image: linear-gradient(#313131ac, #121212da), url('../../img/wallpaper/wallpaper.jpeg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    justify-content: center;
-    min-height: 400px;
-    padding-left: 70px;
-    width: 100%;
-  }
 
 .home p {
     color:#474747;
