--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,9 +1,23 @@
 footer{
     background-color: #00AEFF;
-    height: 50px;
+    height: 7rem;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
-    font-weight: bold;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    font-family: 'Roboto Slab', sans-serif;
+    padding-top: 15px;
+}
+.footer-links{
+    display: flex;
+}
+.footer-links img{
+    width: 40px;
+}
+.footer-text{
+    color: #FFF;
+}
+.footer-links__linkedin{
+    margin-right: 10px;
 }
