--- a/src/components/gallery/CardsList/CardsList.css
+++ b/src/components/gallery/CardsList/CardsList.css
@@ -24,16 +24,15 @@
 }
 
 .filter-text{
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
     width: 50%;
     height: 20px;
-    border-radius:10px ;
-    background-color: #e9e8e8;
     padding: 5px 10px;
     font-family: 'Roboto Slab', sans-serif;
     color:#474747;
-    border:1px solid #474747;
+    border:none;
+    border-bottom: 1px solid #47474788;
 
 }
 .filter-label{
