--- a/src/components/payment/Pix/Pix.css
+++ b/src/components/payment/Pix/Pix.css
@@ -37,3 +37,18 @@
     justify-content: center;
 
 }
+.btn-pix{
+    background-color: #0BB07B;
+    color: #FFF;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 10px;
+    width: 30%;
+    font-weight: bold;
+    border: none;
+    padding: 10px 15px;
+    font-size: 1.1em;
+    display: flex;
+    justify-content: center;
+    margin: 15px auto;
+}
