--- a/src/components/product/ProductImg/ProductImg.css
+++ b/src/components/product/ProductImg/ProductImg.css
@@ -33,7 +33,7 @@
     opacity: 75%;
 }
 .product-gallery img{
-    width: 80px;
+    width: 80%;
     background-color: #EBE9EA;
     padding: 15px;
     border-radius: 10px;
