--- a/src/components/gallery/Card/Card.css
+++ b/src/components/gallery/Card/Card.css
@@ -1,13 +1,13 @@
 .products-item {
     background-color: #e9e8e8;
     text-align: center;
-    padding: 5px 0 10px 0;
-    margin: 10px 0;
+    padding: 5px 0 10px 3%;
+    margin: 10px 5px;
     border-radius: 5px;
     opacity: 80%;
     border-radius: 10px;
-    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.5);
-
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
+    max-width: 400px;
 }
 
 .products-item:hover {
