--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,6 +1,10 @@
+.login{
+    height: 90vh;
+}
+
 .login h1{
     text-align: center;
-    margin-top: 80px;
+    margin-top: 5%;
 }
 
 .login p {
@@ -21,6 +25,7 @@
     padding: 60px 20px;
     border-radius: 20px;
     margin-bottom: 150px;
+    height: 40;
 }
 
 .login label{
