--- a/src/components/gallery/Card/Card.css
+++ b/src/components/gallery/Card/Card.css
@@ -8,6 +8,7 @@
     border-radius: 10px;
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
     max-width: 400px;
+    height: 90%;
 }
 
 .products-item:hover {
