--- a/src/components/delivery/Delivery.css
+++ b/src/components/delivery/Delivery.css
@@ -1,17 +1,12 @@
 .delivery-page {
-    width: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .delivery-type {
-    width: 100%;
     margin-right: 10px;
 }
 
-.delivery-page__itens {
-    display: flex;
-}
 .delivery-title {
     margin-top: 50px;
     display: flex;
@@ -76,3 +71,14 @@
     background-color: #4747472c;
 }
 
+@media screen and (max-width: 1350px){ 
+    .delivery-page{
+        width: 90%;
+    }
+    .delivery-type{
+        width: 100%;
+    }
+    .delivery-option__checked {
+        width: 110%;
+    }
+}
