--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -19,6 +19,7 @@
 .navbar-logo {
     display: flex;
     align-items: center;
+    min-width: 185px;
 }
 
 .navbar-logo img {
@@ -30,13 +31,11 @@
 .navbar-list {
     display: flex;
     list-style: none;
-
 }
 
 .navbar-links {
     margin-right: 10px;
 }
-
 
 .navbar-list li {
     margin: 5px 10px;
@@ -99,3 +98,33 @@
     text-decoration: none;
 }
 
+@media screen and (max-width: 560px){
+    .navbar-list{
+        padding: 0px;
+    }
+    .home-btn{
+        display: none;
+    }
+    .navbar-logo{
+        min-width: 120px;
+    }
+    .navbar-logo h2{
+        font-size: 22px;
+    }
+    .navbar-logo img{
+        width: 30px;
+        height: 30px;
+    }
+    .navbar-list li{
+        margin: 5px;
+    }
+}
+@media screen and (max-width: 415px){
+    .navbar-logo h2{
+        font-size: 17px;
+    }
+    .navbar-logo img{
+        width: 25px;
+        height: 25px;
+    }
+}
