--- a/src/components/product/ProductImg/ProductImg.css
+++ b/src/components/product/ProductImg/ProductImg.css
@@ -73,3 +73,17 @@
     100%{transform: scale(1)}
     
 }
+
+@media screen and (max-width: 1023px){ 
+    .product-img {
+        width: 100%;
+    }
+}
+@media screen and (max-width: 540px){
+    .product-gallery ul{
+        margin-left: -30px;
+    }
+}
+
+
+
