--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -61,3 +61,14 @@ label span{
     padding: .8em 0;
     background-color: transparent;
 }
+
+@media screen and (max-width: 1023px){ 
+    .login form{
+        width: 50%;
+    }
+}
+@media screen and (max-width: 690px){
+    .login form{
+        width: 70%;
+    }
+}
