--- a/src/pages/cart/Cart.css
+++ b/src/pages/cart/Cart.css
@@ -80,10 +80,18 @@
         align-items: center;
         width: 90vw
     }
+    .modal{
+        min-width: 250px;
+    }
 
 }
 @media screen and (max-width: 540px){
     .btn-cart{
         margin-left: 10px;
+    }
+}
+@media screen and (max-width: 440px){
+    .btn-cart{
+        margin-left: 0px;
     }
 }
